--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,11 +109,19 @@ limitations under the License. -->
   <string name="use_postmarket_desc">Display market values from after hour trading. The values are displayed in italics.</string>
   <string name="notes">Notes</string>
   <string name="alerts">Alerts</string>
-  <string name="alert_above">Alert Above</string>
-  <string name="alert_below">Alert Below</string>
+  <string name="alert_above">Stock price above</string>
+  <string name="alert_below">Stock price below</string>
+  <string name="alert_gain_above">Gain above</string>
+  <string name="alert_gain_below">Gain below</string>
+  <string name="alert_loss_above">Loss above</string>
+  <string name="alert_loss_below">Loss below</string>
   <string name="notes_in_list">Notes:</string>
   <string name="alert_above_in_list">Alert if over:</string>
   <string name="alert_below_in_list">Alert if under:</string>
+  <string name="alert_gain_above_in_list">Alert if gain above:</string>
+  <string name="alert_gain_below_in_list">Alert if gain below</string>
+  <string name="alert_loss_above_in_list">Alert if loss above</string>
+  <string name="alert_loss_below_in_list">Alert if loss below</string>
   <string name="alert_above_error">Alert Below must be less than Alert Above.</string>
   <string name="alert_below_error">Alert Above must be more than Alert Below.</string>
   <string name="alert_above_notification_title">%1$s is now above %2$s at %3$s</string>
