--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -113,12 +113,12 @@ limitations under the License. -->
   <string name="alert_loss_above">Wenn Verlust überschritten</string>
   <string name="alert_loss_below">Wenn Verlust unterschritten</string>
   <string name="notes_in_list">Anmerkungen:</string>
-  <string name="alert_above_in_list">Ben. Aktienwert über:</string>
-  <string name="alert_below_in_list">Ben. Aktienwert unter:</string>
-  <string name="alert_gain_above_in_list">Ben. Gewinn über:</string>
-  <string name="alert_gain_below_in_list">Ben. Gewinn unter:</string>
-  <string name="alert_loss_above_in_list">Ben. Verlust über:</string>
-  <string name="alert_loss_below_in_list">Ben. Verlust unter:</string>
+  <string name="alert_above_in_list">Benachr. Aktienwert über:</string>
+  <string name="alert_below_in_list">Benachr. Aktienwert unter:</string>
+  <string name="alert_gain_above_in_list">Benachr. Gewinn über:</string>
+  <string name="alert_gain_below_in_list">Benachr. Gewinn unter:</string>
+  <string name="alert_loss_above_in_list">Benachr. Verlust über:</string>
+  <string name="alert_loss_below_in_list">Benachr. Verlust unter:</string>
   <string name="alert_above_error">Unterschrittener Wert muss kleiner als überschrittener Wert sein.</string>
   <string name="alert_below_error">Überschrittener Wert muss größer als unterschrittener Wert sein.</string>
   <string name="alert_above_notification_title">%1$s ist jetzt über %2$s bei %3$s</string>
