add event timeline

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -331,8 +331,9 @@ limitations under the License. -->
   <string name="data_provider_details_sorted">[Sorted]</string>
   <string name="data_provider_details_unsorted">[Unsorted]</string>
   <string name="remove_price">Sell price</string>
-  <string name="timeline_bought">%1$s@%2$s (%3$s), Bought am %4$s.</string>
-  <string name="timeline_sold">%1$s@%2$s (%3$s), Sold am %4$s.</string>
+  <string name="timeline_asset_bought">%1$s@%2$s (%3$s), Bought am %4$s.</string>
+  <string name="timeline_asset_sold">%1$s@%2$s (%3$s), Sold am %4$s.</string>
+  <string name="timeline_event">Event \'%1$s\' for stock %2$s at %3$s</string>
   <string name="timeline_unknown_date">Date not specified</string>
   <string name="displayed_views">Displayed views</string>
   <string name="displayed_views_summary">Select what is on display.</string>
