--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -328,8 +328,9 @@ limitations under the License. -->
   <string name="data_provider_details_sorted">[Sortiert]</string>
   <string name="data_provider_details_unsorted">[Unsortiert]</string>
   <string name="remove_price">Verkaufspreis</string>
-  <string name="timeline_bought">%1$s@%2$s (%3$s), Gekauft am %4$s.</string>
-  <string name="timeline_sold">%1$s@%2$s (%3$s), Verkauft am %4$s.</string>
+  <string name="timeline_asset_bought">%1$s@%2$s (%3$s), Gekauft am %4$s.</string>
+  <string name="timeline_asset_sold">%1$s@%2$s (%3$s), Verkauft am %4$s.</string>
+  <string name="timeline_event">Ereignis \'%1$s\' für Aktie %2$s um %3$s Uhr</string>
   <string name="timeline_unknown_date">Datum nicht angegeben</string>
   <string name="displayed_views">Angezeigte Darstellungen</string>
   <string name="displayed_views_summary">Wählen Sie aus was angezeigt werden soll.</string>
