--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -330,7 +330,7 @@ limitations under the License. -->
   <string name="remove_price">Verkaufspreis</string>
   <string name="timeline_asset_bought">%1$s@%2$s (%3$s), Gekauft am %4$s.</string>
   <string name="timeline_asset_sold">%1$s@%2$s (%3$s), Verkauft am %4$s.</string>
-  <string name="timeline_event">Ereignis \'%1$s\' für Aktie %2$s um %3$s Uhr</string>
+  <string name="timeline_event">%1$s - Ereignis \'%2$s\' für Aktie %3$s</string>
   <string name="timeline_unknown_date">Datum nicht angegeben</string>
   <string name="displayed_views">Angezeigte Darstellungen</string>
   <string name="displayed_views_summary">Wählen Sie aus was angezeigt werden soll.</string>
