--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,6 +334,8 @@ limitations under the License. -->
   <string name="timeline_asset_bought">%1$s@%2$s (%3$s), Bought am %4$s.</string>
   <string name="timeline_asset_sold">%1$s@%2$s (%3$s), Sold am %4$s.</string>
   <string name="timeline_event">%1$s - Event \'%2$s\' for stock %3$s</string>
+  <string name="timeline_dividend_headline">Dividend %1$s</string>
+  <string name="timeline_dividend">%1$s - %2$s %3$s for stock %4$s</string>
   <string name="timeline_unknown_date">Date not specified</string>
   <string name="displayed_views">Displayed views</string>
   <string name="displayed_views_summary">Select what is on display.</string>
