--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -328,8 +328,8 @@ limitations under the License. -->
   <string name="data_provider_details_sorted">[Sortiert]</string>
   <string name="data_provider_details_unsorted">[Unsortiert]</string>
   <string name="remove_price">Verkaufspreis</string>
-  <string name="timeline_asset_bought">Gekauft am %1$s, %2$s@%3$s (%4$s)</string>
-  <string name="timeline_asset_sold">Verkauft am %1$s, %2$s@%3$s (%4$s)</string>
+  <string name="timeline_asset_bought">Gekauft am %1$s. - %2$s@%3$s (%4$s)</string>
+  <string name="timeline_asset_sold">Verkauft am %1$s. - %2$s@%3$s (%4$s)</string>
   <string name="timeline_event">%1$s - Ereignis \'%2$s\' für Aktie %3$s</string>
   <string name="timeline_dividend_headline">Dividende %1$s</string>
   <string name="timeline_dividend">%1$s - %2$s %3$s für Aktie %4$s</string>
