--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -196,8 +196,8 @@ limitations under the License. -->
   <string name="note_added">Anmerkung \'%1$s\' wurde hinzugefügt.</string>
   <string name="invalid_entry">Ungültge Eingabe</string>
   <string name="note_deleted">Anmerkung wurde gelöscht.</string>
-  <string name="alert_event_notification_title">Ereignis \'%1$s\' für Aktie %2$s</string>
-  <string name="alert_event_notification">Ereignismeldung für Aktie %1$s\nEreignis \'%2$s\'\n%3$s</string>
+  <string name="alert_event_notification_title">Ereignis \'%1$s\' für Aktie \'%2$s\'</string>
+  <string name="alert_event_notification">Ereignismeldung für Aktie \'%1$s\'\nEreignis \'%2$s\'\n%3$s</string>
   <string name="summary_stocks">Aktien</string>
   <string name="summary_stocks_with_assets">Aktien mit Bestand</string>
   <string name="summary_bought_sold">Gekauft/Verkauft</string>
@@ -330,9 +330,9 @@ limitations under the License. -->
   <string name="remove_price">Verkaufspreis</string>
   <string name="timeline_asset_bought">Gekauft am %1$s. - %2$s@%3$s (%4$s)</string>
   <string name="timeline_asset_sold">Verkauft am %1$s. - %2$s@%3$s (%4$s)</string>
-  <string name="timeline_event">%1$s - Ereignis \'%2$s\' für Aktie %3$s</string>
+  <string name="timeline_event">%1$s - Ereignis \'%2$s\' für Aktie \'%3$s\'</string>
   <string name="timeline_dividend_headline">Dividende %1$s</string>
-  <string name="timeline_dividend">%1$s - %2$s %3$s für Aktie %4$s</string>
+  <string name="timeline_dividend">%1$s - %2$s %3$s für Aktie \'%4$s\'</string>
   <string name="timeline_unknown_date">Datum nicht angegeben</string>
   <string name="displayed_views">Angezeigte Darstellungen</string>
   <string name="displayed_views_summary">Wählen Sie aus was angezeigt werden soll.</string>
@@ -344,4 +344,5 @@ limitations under the License. -->
   <string name="no_dividend_data">Keine Online-Dividendendaten vorhanden.</string>
   <string name="date">Datum</string>
   <string name="community_search_links">Community und Such-Links</string>
+  <string name="alert_note">alert</string>
 </resources>
