--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -343,7 +343,7 @@ limitations under the License. -->
   <string name="displayed_views_dialog_title">Settings change</string>
   <string name="displayed_views_dialog_message">You need to restart the app for this setting.</string>
   <string name="annual_dividend_headline">Annual dividend rate</string>
-  <string name="set_annual_dividend_label">New dividend rate</string>
+  <string name="set_annual_dividend_label">New annual dividend rate</string>
   <string name="onlineAnnualDividendData">Online data</string>
   <string name="no_dividend_data">No online dividend data.</string>
   <string name="date">Date</string>
