--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -256,11 +256,12 @@ limitations under the License. -->
   <string name="onlinedata_regularMarketDayRange">Tagesbereich</string>
   <string name="onlinedata_regularMarketVolume">Marktvolumen</string>
   <string name="onlinedata_marketCap">Marktkap.</string>
-  <string name="onlinedata_forwardPE">Zukünftiges PE</string>
-  <string name="onlinedata_epsTrailingTwelveMonths">EPS des verg. Jahres</string>
+  <string name="onlinedata_trailingPE">Vergangenes P/E</string>
+  <string name="onlinedata_priceEpsCurrentYear">Diesjähriges P/E</string>
+  <string name="onlinedata_forwardPE">Zukünftiges P/E</string>
+  <string name="onlinedata_epsTrailingTwelveMonths">Vergangene EPS</string>
   <string name="onlinedata_epsCurrentYear">Diesjährige EPS</string>
   <string name="onlinedata_epsForward">Zukünftige EPS</string>
-  <string name="onlinedata_priceEpsCurrentYear">Preis/EPS</string>
   <string name="onlinedata_bookValue">Buchwert</string>
   <string name="onlinedata_priceToBook">Preis/Buchwert</string>
   <string name="onlinedata_region">Region</string>
