--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -84,12 +84,13 @@ limitations under the License. -->
 
   <string name="hint_add_stock">Aktienkürzel</string>
   <string name="button_add">Hinzufügen</string>
-  <string name="sort_change">Nach Änderung sortieren</string>
+  <string name="sort_change_percentage">Nach Änderung % sortieren</string>
   <string name="sort_name">Nach Namen sortieren</string>
   <string name="sort_group">Nach Gruppe sortieren</string>
   <string name="sort_group_unsorted">Nach Einfügedatum sortiert</string>
   <string name="sort_assets">Nach Bestand sortieren</string>
   <string name="sort_profit">Nach Gewinn sortieren</string>
+  <string name="sort_profit_percentage">Nach Gewinn % sortieren</string>
   <string name="sort_dividend">Nach Dividende sortieren</string>
 
   <string name="ok">OK</string>
