--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@ limitations under the License. -->
   <string name="sort_assets">Sort by Assets</string>
   <string name="sort_profit">Sort by Gain</string>
   <string name="sort_profit_percentage">Sort by Gain %</string>
-  <string name="sort_dividend">Sort by Dividend</string>
+  <string name="sort_dividend_percentage">Sort by Dividend %</string>
   <string name="sort_group">Sort by Group</string>
   <string name="sort_unsorted">Unsorted</string>
 
