--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -89,7 +89,7 @@ limitations under the License. -->
   <string name="sort_assets">Nach Bestand sortieren</string>
   <string name="sort_profit">Nach Gewinn sortieren</string>
   <string name="sort_profit_percentage">Nach Gewinn % sortieren</string>
-  <string name="sort_dividend">Nach Dividende sortieren</string>
+  <string name="sort_dividend_percentage">Nach Dividende % sortieren</string>
   <string name="sort_group">Nach Gruppe sortieren</string>
   <string name="sort_unsorted">Nach Einfügedatum sortiert</string>
 
