--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -360,4 +360,8 @@ limitations under the License. -->
   <string name="delete_filter">Delete filter</string>
   <string name="delete_filter_confirm">Are you sure to delete the filter?</string>
   <string name="delete_filter_msg">The filter was deleted.</string>
+  <string name="add_filter">addfilter</string>
+  <string name="filter_type">filter type</string>
+  <string name="filter_value">filter value</string>
+  <string name="update_filter">update_filter</string>
 </resources>
