--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -359,11 +359,11 @@ limitations under the License. -->
   <string name="delete_filter">Delete filter</string>
   <string name="delete_filter_confirm">Are you sure to delete the filter \'%1$s\' ?</string>
   <string name="delete_filter_msg">The filter \'%1$s\' was deleted.</string>
-  <string name="add_filter">addfilter</string>
-  <string name="filter_type">filter type</string>
-  <string name="filter_value_text">filter value text</string>
-  <string name="filter_value_double">filter value double</string>
-  <string name="update_filter">update_filter</string>
+  <string name="add_filter">Add filter</string>
+  <string name="filter_type">Filter type</string>
+  <string name="filter_value_text">Text value</string>
+  <string name="filter_value_double">Number value</string>
+  <string name="update_filter">Update filter</string>
   <string name="add_filter_msg">The filter \'%1$s\' was added.</string>
   <string name="update_filter_msg">The filter \'%1$s\' was updated.</string>
   <string name="filter_longterm_name">filter_longterm_name</string>
