--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -369,4 +369,28 @@ limitations under the License. -->
   <string name="update_filter_msg">The filter \'%1$s\' was updated.</string>
   <string name="filter_longterm_name">filter_longterm_name</string>
   <string name="filter_longterm_desc">filter_longterm_desc</string>
+  <string name="filter_percentagechangegreater_name"></string>
+  <string name="filter_percentagechangegreater_desc"></string>
+  <string name="filter_percentagechangeless_name"></string>
+  <string name="filter_percentagechangeless_desc"></string>
+  <string name="filter_symbolcontainstype_name"></string>
+  <string name="filter_symbolcontainstype_desc"></string>
+  <string name="filter_notecontainstype_name"></string>
+  <string name="filter_notecontainstype_desc"></string>
+  <string name="filter_assetgreater_name"></string>
+  <string name="filter_assetgreater_desc"></string>
+  <string name="filter_assetless_name"></string>
+  <string name="filter_assetless_desc"></string>
+  <string name="filter_profitgreater_name"></string>
+  <string name="filter_profitgreater_desc"></string>
+  <string name="filter_profitless_name"></string>
+  <string name="filter_profitless_desc"></string>
+  <string name="filter_profitpercentagegreater_name"></string>
+  <string name="filter_profitpercentagegreater_desc"></string>
+  <string name="filter_profitpercentageless_name"></string>
+  <string name="filter_profitpercentageless_desc"></string>
+  <string name="filter_dividendpercentagegreater_name"></string>
+  <string name="filter_dividendpercentagegreater_desc"></string>
+  <string name="filter_dividendpercentageless_name"></string>
+  <string name="filter_dividendpercentageless_desc"></string>
 </resources>
